[package]
name = "lava-api"
version = "0.1.0"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = { version = "^1.0.97", features = ["derive"] }
serde_json = "^1"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = [ "macros"] }
url = "2"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
structopt = "0.3"
