[package]
name = "lava-api"
version = "0.1.0"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = { version = "^1.0.97", features = ["derive"] }
serde_json = "^1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.4", features = ["macros", "rt", "rt-multi-thread", "sync"] }
url = "2"
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
anyhow = "1"
structopt = "0.3"
env_logger = "0.8"
