[package]
name = "lava-api-mock"
version = { workspace = true }
authors = ["Edmund Smith <ed.smith@collabora.com>"]
edition = "2024"
rust-version = { workspace = true }
license = "MIT OR Apache-2.0"
description = "Mock crate for the LAVA REST APIs"
homepage = "https://github.com/collabora/lava-api"
repository = "https://github.com/collabora/lava-api"
readme = "../README.md"

[dependencies]
boulder = { version="0.3", features = ["persian-rug"] }
chrono = { version = "0.4.44", features = ["serde"] }
clone-replace = "0.1.1"
django-query = { version="0.2", features = ["wiremock", "persian-rug", "clone-replace"] }
futures = "0.3"
persian-rug = { version = "0.1", features = ["clone-replace"] }
rust_decimal = "1"
rust_decimal_macros = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3"
serde_norway = { workspace = true }
tokio = { version = "1.50", features = ["macros", "rt", "rt-multi-thread", "sync"] }
strum = { version = "0.28", features = [ "derive" ] }
url = "2.5"
thiserror = "2.0.18"
log = "0.4.29"
wiremock = { version = "0.5.22" }
rand = { version = "0.10" }
arc-swap = "1.9"
rand_chacha = "0.10"
junit-report = "0.8.3"
regex = "1.12.3"

[dev-dependencies]
anyhow = "1.0.102"
env_logger = "0.11"
test-log = "0.2"
reqwest = "0.13"
tokio-test = "0.4"
lava-api = { path = "../lava-api" }
junit-parser = "1"
