[package]
name = "lava-api"
version = "0.1.2"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Helper crate to work with the LAVA REST APIs"
homepage = "https://github.com/collabora/lava-api"
repository = "https://github.com/collabora/lava-api"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.20", features = ["serde"] }
futures = "0.3"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.51"
serde_with = "3"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.35", features = ["macros", "rt", "rt-multi-thread", "sync"] }
url = "2.2"
thiserror = "1.0.56"
log = "0.4.8"
strum = { version = "0.25", features = ["derive"] }
bytes = "1.2.1"

[dev-dependencies]
anyhow = "1.0.26"
structopt = "0.3"
env_logger = "0.10"
lava-api-mock = { path = "../lava-api-mock", version = "0.1.2" }
wiremock = "0.5.22"
django-query = "0.2"
boulder = "0.3"
persian-rug = "0.1"
test-log = "0.2"
tokio-test = "0.4"
junit-parser = "1"
