[package]
name = "lava-api"
version = { workspace = true }
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2024"
rust-version = { workspace = true }
license = "MIT OR Apache-2.0"
description = "Helper crate to work with the LAVA REST APIs"
homepage = "https://github.com/collabora/lava-api"
repository = "https://github.com/collabora/lava-api"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
futures = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3"
serde_norway = { workspace = true }
reqwest = { version = "0.13", features = ["json", "stream"] }
tokio = { version = "1.50", features = ["macros", "rt", "rt-multi-thread", "sync"] }
url = "2.5"
thiserror = "2.0.18"
log = "0.4.29"
strum = { version = "0.28", features = ["derive"] }
bytes = "1.11.1"

[dev-dependencies]
anyhow = "1.0.102"
structopt = "0.3"
env_logger = "0.11"
lava-api-mock = { path = "../lava-api-mock" }
wiremock = "0.5.22"
django-query = "0.2"
boulder = "0.3"
persian-rug = "0.1"
test-log = "0.2"
tokio-test = "0.4"
junit-parser = "1"
